Fix comment modal scrollbar issue

--- a/src/styles.css
+++ b/src/styles.css
@@ -105,6 +105,7 @@ img {
   right: 0;
   top: 0;
   bottom: 0;
+  overflow: auto;
   background-color: rgba(38, 38, 38, 0.553);
   display: none;
   justify-content: center;
